# b-rep-viewer

./: .gitignore  README.md  app.py  pyproject.toml
static/js/: viewer.js
step_geometries/: geom_2.step
templates/: index.html
