[project]
name = "b-rep-veiwer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "cadquery (==2.5.2)",
    "flask (==3.1.2)",
    "numpy (==2.3.2)",
    "waitress (==3.0.2)",

]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
